fix an issue on linux (ubuntu)